added copy toast, started cleaning up styling

--- a/src/devtools/panel/components/molecules/SelectorElement/SelectorElement.module.scss
+++ b/src/devtools/panel/components/molecules/SelectorElement/SelectorElement.module.scss
@@ -4,4 +4,8 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
+  border: 1px solid #e8e8e8;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #fafafa;
 }
