--- a/src/devtools/panel/variables.scss
+++ b/src/devtools/panel/variables.scss
@@ -1,6 +1,10 @@
 $border-light: #000000;
 $border-dark: #ffffff;
 $border-radius: 8px;
+$elm-light: #000;
+$elm-dark: #fff;
+$elm-hover-light: #757575;
+$elm-hover-dark: #f0f0f0;
 $bg-elm-light: #fafafa;
 $bg-elm-dark: #000000;
 $bg-elm-hover-light: #f0f0f0;
