--- a/src/devtools/panel/components/molecules/ClipboardCopyButton/ClipboardCopyButton.module.scss
+++ b/src/devtools/panel/components/molecules/ClipboardCopyButton/ClipboardCopyButton.module.scss
@@ -1,30 +1,22 @@
-@import '../../../variables';
-
 .wrapper {
   display: grid;
   place-content: center;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   cursor: pointer;
-  color: $elm-light;
+  color: var(--elm);
   &:hover {
-    color: $elm-hover-light;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    border-color: $border-dark;
-    background-color: $bg-elm-dark;
-    &:hover {
-      background-color: $bg-elm-hover-dark;
-    }
+    color: var(--elm-hover);
   }
 }
 
 .copyMessage {
-  color: #000 !important;
-  border-radius: $border-radius !important;
+  color: var(--elm) !important;
+  background-color: var(--bg-elm) !important;
+  border-radius: var(--border-radius) !important;
 }
 
 svg {
+  color: var(--elm);
   width: 20px;
   height: 20px;
 }
