--- a/src/devtools/panel/components/molecules/SelectorElement/SelectorElement.module.scss
+++ b/src/devtools/panel/components/molecules/SelectorElement/SelectorElement.module.scss
@@ -1,5 +1,3 @@
-@import '../../../variables';
-
 .wrapper {
   display: flex;
   flex-flow: row nowrap;
@@ -7,15 +5,15 @@
   justify-content: center;
   gap: 5px;
   border: 1px solid #e8e8e8;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   padding: 7px;
-  color: $elm-light;
-  background-color: $bg-elm-light;
+  color: var(--elm);
+  background-color: var(--bg-elm);
 }
 
 .active {
   &hover {
-    color: $elm-hover-light;
-    background-color: $bg-elm-hover-light;
+    color: var(--elm-hover);
+    background-color: var(--bg-elm-hover);
   }
 }
