--- a/src/devtools/panel/index.scss
+++ b/src/devtools/panel/index.scss
@@ -7,6 +7,8 @@
   --elm-hover: #757575;
   --bg-elm: #fafafa;
   --bg-elm-hover: #f0f0f0;
+  --bg-label: #dddbdb;
+  --bg-label-hover: #242424;
 
   @media (prefers-color-scheme: dark) {
     --bg: #242424;
@@ -15,6 +17,8 @@
     --elm-hover: #757575;
     --bg-elm: #1a1a1a;
     --bg-elm-hover: #1a1a1a;
+    --bg-label: #555555;
+    --bg-label-hover: #242424;
   }
 }
 :root {
